<resources>
    <string name="app_name">NewYorkTimes</string>
    <string name="search">Search</string>
    <string name="enter_search_query">Enter search query</string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="sort_order">Sort Order</string>
    <string name="begin_date">Begin Date</string>
    <string name="arts">Arts</string>
    <string name="fashion_amp_style"><![CDATA[Fashion & Style]]></string>
    <string name="choose_a_date">Choose a date</string>
    <string-array name="sort_order_array">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
</resources>
